started working on adding stuff to backend

--- a/server/tasks.json
+++ b/server/tasks.json
@@ -1,6 +1,6 @@
 [
         {
-                "taskNames": "example",
+                "taskName": "example",
                 "link": "link.com",
                 "points": "5"
         }
